--- a/html/_/index.html
+++ b/html/_/index.html
@@ -719,7 +719,7 @@ crossorigin=""/>
                         <h2 class="item annexeI49B d-inline IFRA-infos">Annexe I :</h2>
                         <h3 class="textitem d-inline">
                           <span lang="fr">Certains ingrédients naturels contiennent des composants eux-mêmes réglementés qu'il convient de prendre en compte dans les doses limites recommandées. Dans le cas où vous n'avez pas la possibilité d'avoir des chromatographies précises pour vos qualités d'ingrédients naturels, l'IFRA fourni des tables avec des concentrations à prendre par défaut. Les voici : </span>
-                          <span lang="en">Some natural ingredients contain regulated compounds that have to be taken into account in the recommended limits of use. In case you do not have access to chromatograms for your natrual ingredients, the IFRA is giving tables with default values. Here they are :</span>
+                          <span lang="en">Some regulated synthetic ingredients are found in nature and in certain proportions in natural ingredients. This presence in nature has to be taken into account when calculating limits of use recommended by the IFRA. In case you do not know these concentrations, you can use the ones estimated by the IFRA. Here They are :</span>
                         </h3>
                         <br>
                       <!--Table concentration des synth dans les nat-->
@@ -942,7 +942,7 @@ crossorigin=""/>
                       <h2 class="annexeI49B d-inline IFRA-infos item">Annexe I :</h2>
                       <h3 class="textitem d-inline">
                         <span lang="fr">Certains ingrédients naturels contiennent des composants eux-mêmes réglementés qu'il convient de prendre en compte dans les doses limites recommandées. Dans le cas où vous n'avez pas la possibilité d'avoir des chromatographies précises pour vos qualités d'ingrédients naturels, l'IFRA fourni des tables avec des concentrations à prendre par défaut. Les voici : </span>
-                        <span lang="en">Some natural ingredients contain regulated compounds that have to be taken into account in the recommended limits of use. In case you do not have access to chromatograms for your natrual ingredients, the IFRA is giving tables with default values. Here they are :</span>
+                        <span lang="en">Some regulated synthetic ingredients are found in nature and in certain proportions in natural ingredients. This presence in nature has to be taken into account when calculating limits of use recommended by the IFRA. In case you do not know these concentrations, you can use the ones estimated by the IFRA. Here They are :</span>
                       </h3>
                       <br>
                         <table class="49THtableannexeI mt-0 ">
@@ -1584,7 +1584,7 @@ crossorigin=""/>
                               <div class="listy-48th-IFRA-table-with-botanicals IFRA-table mt-3">
                                 <h2 class="item d-inline annexeI49B IFRA-infos">Annexe I :</h2>
                                 <h3 class="textitem d-inline">
-                                  <span lang="fr">Certains ingrédients synthétiques réglementés sont présents dans la nature et se retrouvent dans des concentrations plus ou moins importantes dans plusieurs ingrédients naturels. Cette présence dans les naturels doit donc être prise en compte dans le calcul des concentrations limites recommandées par l'IFRA. Dans le cas où les concentrations vous seraient inconnues, il est possible de se baser sur les concentrations estimées par l'IFRA. Les voici : </span>
+                                  <span lang="fr">Certains ingrédients naturels contiennent des composants eux-mêmes réglementés qu'il convient de prendre en compte dans les doses limites recommandées. Dans le cas où vous n'avez pas la possibilité d'avoir des chromatographies précises pour vos qualités d'ingrédients naturels, l'IFRA fourni des tables avec des concentrations à prendre par défaut. Les voici : </span>
                                   <span lang="en">Some regulated synthetic ingredients are found in nature and in certain proportions in natural ingredients. This presence in nature has to be taken into account when calculating limits of use recommended by the IFRA. In case you do not know these concentrations, you can use the ones estimated by the IFRA. Here They are :</span>
                                 </h3>
                                 <br>
