--- a/html/_/nouveaute.html
+++ b/html/_/nouveaute.html
@@ -198,6 +198,20 @@ crossorigin=""/>
     <ul>
       <li>
         <div class="content">
+          <h2 id="heading22"><span lang="fr">13 septembre 2020</span><span lang="en">13<sup>rd</sup> september 2020</span>
+            <br><span lang="fr" class="ajoutMP">Ajout de 5 nouvelles matières premières</span><span lang="en" class="ajoutMP">5 new ingredients added </span>
+          </h2>
+          <p>
+              <a class="interpop"  href="../ingredients/Golden_Rod_EO__Verge_d_or_HE.html"><span lang="en">Golden Rod EO (CAS N°: 96690-40-3)</span><span lang="fr">Verge d'or HE (CAS N°: 96690-40-3)</span></a>
+              <br><a class="interpop"  href="../ingredients/Myrtle_EO__Myrte_HE.html"><span lang="en">Myrtle EO (CAS N°: 8008-46-6)</span><span lang="fr">Myrte HE (CAS N°: 8008-46-6)</span></a>
+              <br><a class="interpop"  href="../ingredients/Methyl_Heptyl_Ketone__Méthyl_Heptyl_Cétone.html"><span lang="en">Methyl Heptyl Ketone (CAS N°: 821-55-6)</span><span lang="fr">Méthyl Heptyl Cétone (CAS N°: 821-55-6)</span></a>
+              <br><a class="interpop"  href="../ingredients/Citronellic_Acid__Acide_Citronellique.html"><span lang="en">Citronellic Acid (CAS N°: 502-47-6)</span><span lang="fr">Acide Citronellique (CAS N°: 502-47-6)</span></a>
+              <br><a class="interpop"  href="../ingredients/Spirogalbanone®__Spirogalbanone®.html"><span lang="en">Spirogalbanone<sup>®</sup> (CAS N°: 224031-70-3)</span><span lang="fr">Spirogalbanone<sup>®</sup> (CAS N°: 224031-70-3)</span></a>
+          </p>
+        </div>
+      </li>
+      <li>
+        <div class="content">
           <h2 id="heading22"><span lang="fr">26 Juillet 2020</span><span lang="en">26<sup>th</sup> july 2020</span>
             <br><span lang="fr" class="ajoutMP">Ajout de 5 nouvelles matières premières</span><span lang="en" class="ajoutMP">5 new ingredients added </span>
           </h2>
@@ -205,7 +219,7 @@ crossorigin=""/>
               <a class="interpop"  href="../ingredients/Mandarin_Red_EO__Mandarine_Rouge_HE.html"><span lang="en">Mandarin Red EO (CAS N°: 8008-31-9)</span><span lang="fr">Mandarine Rouge HE (CAS N°: 8008-31-9)</span></a>
               <br><a class="interpop"  href="../ingredients/Turmeric_EO__Curcuma_Longa_HE.html"><span lang="en">Turmeric EO (CAS N°: 8024-37-1)</span><span lang="fr">Curcuma Longa HE (CAS N°: 8024-37-1)</span></a>
               <br><a class="interpop"  href="../ingredients/Parsley_Leaf_EO__Persil_Feuilles_HE.html"><span lang="en">Parsley Leaf EO (CAS N°: 8000-68-8)</span><span lang="fr">Persil Feuilles HE (CAS N°: 8000-68-8)</span></a>
-              <br><a class="interpop"  href="../ingredients/Okoumal®__Okoumal®.html"><span lang="en">Okoumal® (CAS N°: 131812-52-7)</span><span lang="fr">Okoumal® (CAS N°: 131812-52-7)</span></a>
+              <br><a class="interpop"  href="../ingredients/Okoumal®__Okoumal®.html"><span lang="en">Okoumal<sup>®</sup> (CAS N°: 131812-52-7)</span><span lang="fr">Okoumal<sup>®</sup> (CAS N°: 131812-52-7)</span></a>
               <br><a class="interpop"  href="../ingredients/cis-3-Hexenyl_IsoButyrate__Isobutyrate_de_cis-3-Hexènyle.html"><span lang="en">cis-3-Hexenyl IsoButyrate (CAS N°: 41519-23-7)</span><span lang="fr">Isobutyrate de cis-3-Hexènyle (CAS N°: 41519-23-7)</span></a>
           </p>
         </div>
