--- a/html/_/support.html
+++ b/html/_/support.html
@@ -320,7 +320,7 @@ crossorigin=""/>
           <span lang="en"><b>Graphic Design, Visuals, and Colors </a></b> </span>
         </p>
           <ul class="mb-4" style="font-size: 0.8em;">
-            <li class="nouveausupporter">JACQUOT Muriel <i>(Apport de l'expertise de Myrissi pour la couleur des familles et descripteurs)</i></li>
+            <li>JACQUOT Muriel <i>(Apport de l'expertise de Myrissi pour la couleur des familles et descripteurs)</i></li>
             <li>ERCOLANELLI Clara (Logo)</li>
           </ul>
       </div>
