show a default text when IFRA is not applicable

--- a/html/_/index.html
+++ b/html/_/index.html
@@ -516,11 +516,11 @@ crossorigin=""/>
               <span lang="fr">IFRA <sup class="fas fa-question-circle iconetab" title="L'IFRA (International Fragrance Association) recommande des utilisations maximales pour certaines matières premières dans leur produit fini. L'avis donné par cette association possède une grande valeur dans le milieu du parfum. Respecter les normes IFRA est gage de qualité et de sécurité à l'emploi du parfum."></sup> :</span>
               <span lang="en">IFRA <sup class="fas fa-question-circle iconetab" title="The IFRA (International Fragrance Association) provides maximum uses for some raw materials in finished products. The notices given by this association have a great value in the perfume industry. Respecting IFRA standards is a guarantee of quality and security when using the perfume."></sup> :</span>
             </h2>
-            <!--<h3 class="textitem d-inline IFRA-show-nothing">
+            <h3 class="textitem d-inline IFRA-show-nothing">
               <span lang="fr">Ingrédient non réglementé</span>
               <span lang="en">This ingredient is not restricted</span>
-            </h3>-->
-            <br>
+            </h3>
+	    <br>
             <!--Onglets pour les amendements IFRA-->
             <div class="panel-heading m-0 p-0">
               <nav class="navbar navbar-expand-lg bg-transparent">
@@ -1376,10 +1376,10 @@ crossorigin=""/>
                   <span lang="fr">IFRA <sup class="fas fa-question-circle iconetab" title="L'IFRA (International Fragrance Association) recommande des utilisations maximales pour certaines matières premières dans leur produit fini. L'avis donné par cette association possède une grande valeur dans le milieu du parfum. Respecter les normes IFRA est gage de qualité et de sécurité à l'emploi du parfum."></sup> :</span>
                   <span lang="en">IFRA <sup class="fas fa-question-circle iconetab" title="The IFRA (International Fragrance Association) provides maximum uses for some raw materials in finished products. The notices given by this association have a great value in the perfume industry. Respecting IFRA standards is a guarantee of quality and security when using the perfume."></sup> :</span>
                 </h2>
-                <!--<h3 class="textitem d-inline IFRA-show-nothing">
+                <h3 class="textitem d-inline IFRA-show-nothing">
                   <span lang="fr">Ingrédient non réglementé</span>
                   <span lang="en">This ingredient is not restricted</span>
-                </h3>-->
+                </h3>
                 <br>
                 <!--Onglets pour les amendements IFRA-->
                 <div class="panel-heading m-0 p-0">
