'Intrinsic property' <-> 'Cause de la restriction'

--- a/html/_/index.html
+++ b/html/_/index.html
@@ -565,7 +565,7 @@ crossorigin=""/>
                       </h3>
                       <br>
                       <!--Cause d'apparition de l'ingrédients concerné-->
-                      <h2 class="item cause d-inline IFRA-infos modalbody-cause-48">
+                      <h2 class="item cause d-inline IFRA-infos amendment">
                           <span lang="fr">Cause de la restriction <sup class="fas fa-question-circle iconetab" title="Tous les ingrédients ne sont pas réglementés pour la même raison, l'IFRA précise donc les propriétés de l'ingrédient responsables de la restriction."></sup> :</span>
                           <span lang="en">Cause of restriction <sup class="fas fa-question-circle iconetab" title="All ingredients are not regulated for the same reason, so IFRA specifies the properties of the ingredient responsible for the restriction."></sup> :</span>
                       </h2>
@@ -768,7 +768,7 @@ crossorigin=""/>
                       </h3>
                       <br>
                       <!--Cause d'apparition de l'ingrédients concerné-->
-                      <h2 class="item cause d-inline IFRA-infos modalbody-cause-49">
+                      <h2 class="item cause d-inline IFRA-infos amendment49">
                           <span lang="fr">Cause de la restriction <sup class="fas fa-question-circle iconetab" title="Tous les ingrédients ne sont pas réglementés pour la même raison, l'IFRA précise donc les propriétés de l'ingrédient responsables de la restriction."></sup> :</span>
                           <span lang="en">Cause of restriction <sup class="fas fa-question-circle iconetab" title="All ingredients are not regulated for the same reason, so IFRA specifies the properties of the ingredient responsible for the restriction."></sup> :</span>
                       </h2>
@@ -1457,7 +1457,7 @@ crossorigin=""/>
                               </h3>
                               <br>
                               <!--Cause d'apparition de l'ingrédients concerné-->
-                              <h2 class="item d-inline cause IFRA-infos modalbody-cause-48">
+                              <h2 class="item d-inline cause IFRA-infos amendment">
                                 <span lang="fr">Cause de la restriction <sup class="fas fa-question-circle iconetab" title="Tous les ingrédients ne sont pas réglementés pour la même raison, l'IFRA précise donc les propriétés de l'ingrédient responsables de la restriction."></sup> :</span>
                                 <span lang="en">Cause of restriction <sup class="fas fa-question-circle iconetab" title="All ingredients are not regulated for the same reason, so IFRA specifies the properties of the ingredient responsible for the restriction."></sup> :</span>
                               </h2>
@@ -1664,7 +1664,7 @@ crossorigin=""/>
                               </h3>
                               <br>
                               <!--Cause d'apparition de l'ingrédients concerné-->
-                              <h2 class="item d-inline cause IFRA-infos modalbody-cause-49">
+                              <h2 class="item d-inline cause IFRA-infos amendment49">
                                 <span lang="fr">Cause de la restriction <sup class="fas fa-question-circle iconetab" title="Tous les ingrédients ne sont pas réglementés pour la même raison, l'IFRA précise donc les propriétés de l'ingrédient responsables de la restriction."></sup> :</span>
                                 <span lang="en">Cause of restriction <sup class="fas fa-question-circle iconetab" title="All ingredients are not regulated for the same reason, so IFRA specifies the properties of the ingredient responsible for the restriction."></sup> :</span>
                               </h2>
