added a 'to-be-emptied' class

--- a/html/_/index.html
+++ b/html/_/index.html
@@ -561,7 +561,7 @@ crossorigin=""/>
                           <span lang="en">Restriction type <sup class="fas fa-question-circle iconetab" title="IFRA defines several types of restriction according to the nature and dangerousness of the concerned ingredient. "></sup> :</span>
                       </h2>
                       <h3 class="textitem d-inline">
-                        <span class="modalbody-ifra-48"></span>
+                        <span class="to-be-emptied modalbody-ifra-48"></span>
                       </h3>
                       <br>
                       <!--Cause d'apparition de l'ingrédients concerné-->
@@ -570,7 +570,7 @@ crossorigin=""/>
                           <span lang="en">Cause of restriction <sup class="fas fa-question-circle iconetab" title="All ingredients are not regulated for the same reason, so IFRA specifies the properties of the ingredient responsible for the restriction."></sup> :</span>
                       </h2>
                       <h3 class="textitem d-inline">
-                        <span class="modalbody-cause-48"></span>
+                        <span class="to-be-emptied modalbody-cause-48"></span>
                       </h3>
                       <br>
                       <!--Amendement d'apparition de l'ingrédients concerné-->
@@ -579,7 +579,7 @@ crossorigin=""/>
                           <span lang="en">Amendment <sup class="fas fa-question-circle iconetab" title="Number of the last amendment in which this ingredient's regulation was modified. Today, we have reached the 49th"></sup> :</span>
                       </h2>
                       <h3 class="textitem d-inline">
-                        <span class="modalbody-amendment-48"></span>
+                        <span class="to-be-emptied modalbody-amendment-48"></span>
                       </h3>
                       <br>
                       <!--Commentaires-->
@@ -588,7 +588,7 @@ crossorigin=""/>
                           <span lang="en">Comments <sup class="fas fa-question-circle iconetab" title="The IFRA (International Fragrance Association) provides a certain amount of recommandations or specifications to explain the ingredients restrictions."></sup> :</span>
                       </h2>
                       <h3 class="textitem d-inline">
-                        <span class="modalbody-commentifra-48"></span>  
+                        <span class="to-be-emptied modalbody-commentifra-48"></span>  
                       </h3>
 
                       <!--Blocktable contient tout les tableaux + les paragraphes de responsabilité et le lien vers les modaux IFRA-->
@@ -650,17 +650,17 @@ crossorigin=""/>
                                 </tr>
                                 <!-- CORPS DU TABLEAU-->
                                 <tr>
-                                  <td><span class="modalbody-48-cat1"></span></td>
-                                  <td><span class="modalbody-48-cat2"></span></td>
-                                  <td><span class="modalbody-48-cat3"></span></td>
-                                  <td><span class="modalbody-48-cat4"></span></td>
-                                  <td><span class="modalbody-48-cat5"></span></td>
-                                  <td><span class="modalbody-48-cat6"></span></td>
-                                  <td><span class="modalbody-48-cat7"></span></td>
-                                  <td><span class="modalbody-48-cat8"></span></td>
-                                  <td><span class="modalbody-48-cat9"></span></td>
-                                  <td><span class="modalbody-48-cat10"></span></td>
-                                  <td><span class="modalbody-48-cat11"></span></td>
+                                  <td><span class="to-be-emptied modalbody-48-cat1"></span></td>
+                                  <td><span class="to-be-emptied modalbody-48-cat2"></span></td>
+                                  <td><span class="to-be-emptied modalbody-48-cat3"></span></td>
+                                  <td><span class="to-be-emptied modalbody-48-cat4"></span></td>
+                                  <td><span class="to-be-emptied modalbody-48-cat5"></span></td>
+                                  <td><span class="to-be-emptied modalbody-48-cat6"></span></td>
+                                  <td><span class="to-be-emptied modalbody-48-cat7"></span></td>
+                                  <td><span class="to-be-emptied modalbody-48-cat8"></span></td>
+                                  <td><span class="to-be-emptied modalbody-48-cat9"></span></td>
+                                  <td><span class="to-be-emptied modalbody-48-cat10"></span></td>
+                                  <td><span class="to-be-emptied modalbody-48-cat11"></span></td>
                                 </tr>
                               </table>
                             
@@ -676,9 +676,9 @@ crossorigin=""/>
                                   <th><span lang="fr">Produits rincés</span><span lang="en">Rinse off products</span></th>
                                 </tr>
                                 <tr>
-                                  <td><span class="modalbody-leave-on"></span></td>
-                                  <td><span class="modalbody-rinse-off"></span></td>
-                                  <td><span class="modalbody-non-skin-contact"></span></td>
+                                  <td><span class="to-be-emptied modalbody-leave-on"></span></td>
+                                  <td><span class="to-be-emptied modalbody-rinse-off"></span></td>
+                                  <td><span class="to-be-emptied modalbody-non-skin-contact"></span></td>
                                 </tr>
                               </table>
                         </div>
@@ -707,7 +707,7 @@ crossorigin=""/>
                                     <td>CAS N°</td>
                                     <td>Estimated Concentration</td>
                                   </tr>
-                                <tbody class="ingredients-containing-with-botanicals-48">
+                                <tbody class="to-be-emptied ingredients-containing-with-botanicals-48">
                                 </tbody>
                         </table>
                       </div>
@@ -741,7 +741,7 @@ crossorigin=""/>
                                 <span lang="en">Estimated Concentration</span>
                               </td>
                             </tr>
-                            <tbody class="ingredients-containing-without-botanicals-48">
+                            <tbody class="to-be-emptied ingredients-containing-without-botanicals-48">
                             </tbody>
                       </table>
                     </div><!--Fermeture blockannexeI48-->
@@ -764,7 +764,7 @@ crossorigin=""/>
                           <span lang="en">Restriction type <sup class="fas fa-question-circle iconetab" title="IFRA defines several types of restriction according to the nature and dangerousness of the concerned ingredient. "></sup> :</span>
                       </h2>
                       <h3 class="textitem d-inline">
-                          <span class="modalbody-ifra-49"></span>
+                          <span class="to-be-emptied modalbody-ifra-49"></span>
                       </h3>
                       <br>
                       <!--Cause d'apparition de l'ingrédients concerné-->
@@ -773,7 +773,7 @@ crossorigin=""/>
                           <span lang="en">Cause of restriction <sup class="fas fa-question-circle iconetab" title="All ingredients are not regulated for the same reason, so IFRA specifies the properties of the ingredient responsible for the restriction."></sup> :</span>
                       </h2>
                       <h3 class="textitem d-inline">
-                        <span class="modalbody-cause-49"></span>
+                        <span class="to-be-emptied modalbody-cause-49"></span>
                       </h3>
                       <br>
                       <!--Amendement d'apparition de l'ingrédients concerné-->
@@ -782,7 +782,7 @@ crossorigin=""/>
                           <span lang="en">Amendment <sup class="fas fa-question-circle iconetab" title="Number of the first amendment in which the ingredient was added. Today, we have reached the 49th. "></sup> :</span>
                       </h2>
                       <h3 class="textitem d-inline">
-                        <span class="modalbody-amendment-49"></span>
+                        <span class="to-be-emptied modalbody-amendment-49"></span>
                       </h3>
                       <br>
                       <!--Commentaires-->
@@ -791,7 +791,7 @@ crossorigin=""/>
                           <span lang="en">Comments <sup class="fas fa-question-circle iconetab" title="The IFRA (International Fragrance Association) provides a certain amount of recommandations or specifications to explain the ingredients restrictions."></sup> :</span>
                       </h2>
                       <h3 class="textitem d-inline">
-                        <span class="modalbody-commentifra-49"></span>  
+                        <span class="to-be-emptied modalbody-commentifra-49"></span>  
                       </h3>
                       
                       <div class="blocktable49  mt-3 main-49th-IFRA-table">
@@ -843,15 +843,15 @@ crossorigin=""/>
                                 </tr>
                                 <!-- CORPS DU TABLEAU-->
                                 <tr>
-                                  <td><span class="modalbody-49-cat1"></span></td>
-                                  <td><span class="modalbody-49-cat2"></span></td>
-                                  <td><span class="modalbody-49-cat3"></span></td>
-                                  <td><span class="modalbody-49-cat4"></span></td>
-                                  <td><span class="modalbody-49-cat5A"></span></td>
-                                  <td><span class="modalbody-49-cat5B"></span></td>
-                                  <td><span class="modalbody-49-cat5C"></span></td>
-                                  <td><span class="modalbody-49-cat5D"></span></td>
-                                  <td><span class="modalbody-49-cat6"></span></td>
+                                  <td><span class="to-be-emptied modalbody-49-cat1"></span></td>
+                                  <td><span class="to-be-emptied modalbody-49-cat2"></span></td>
+                                  <td><span class="to-be-emptied modalbody-49-cat3"></span></td>
+                                  <td><span class="to-be-emptied modalbody-49-cat4"></span></td>
+                                  <td><span class="to-be-emptied modalbody-49-cat5A"></span></td>
+                                  <td><span class="to-be-emptied modalbody-49-cat5B"></span></td>
+                                  <td><span class="to-be-emptied modalbody-49-cat5C"></span></td>
+                                  <td><span class="to-be-emptied modalbody-49-cat5D"></span></td>
+                                  <td><span class="to-be-emptied modalbody-49-cat6"></span></td>
                                 </tr>
                                 <tr class="mt-2">
                                   <th>
@@ -892,15 +892,15 @@ crossorigin=""/>
                                   </th>
                                 </tr>
                                 <tr>
-                                  <td><span class="modalbody-49-cat7A"></span></td>
-                                  <td><span class="modalbody-49-cat7B"></span></td>
-                                  <td><span class="modalbody-49-cat8"></span></td>
-                                  <td><span class="modalbody-49-cat9"></span></td>
-                                  <td><span class="modalbody-49-cat10A"></span></td>
-                                  <td><span class="modalbody-49-cat10B"></span></td>
-                                  <td><span class="modalbody-49-cat11A"></span></td>
-                                  <td><span class="modalbody-49-cat11B"></span></td>
-                                  <td><span class="modalbody-49-cat12"></span></td>
+                                  <td><span class="to-be-emptied modalbody-49-cat7A"></span></td>
+                                  <td><span class="to-be-emptied modalbody-49-cat7B"></span></td>
+                                  <td><span class="to-be-emptied modalbody-49-cat8"></span></td>
+                                  <td><span class="to-be-emptied modalbody-49-cat9"></span></td>
+                                  <td><span class="to-be-emptied modalbody-49-cat10A"></span></td>
+                                  <td><span class="to-be-emptied modalbody-49-cat10B"></span></td>
+                                  <td><span class="to-be-emptied modalbody-49-cat11A"></span></td>
+                                  <td><span class="to-be-emptied modalbody-49-cat11B"></span></td>
+                                  <td><span class="to-be-emptied modalbody-49-cat12"></span></td>
                                 </tr>
                               </table>
                         </div>
@@ -928,7 +928,7 @@ crossorigin=""/>
                                   <td>CAS N°</td>
                                   <td>Estimated Concentration</td>
                                 </tr>
-                              <tbody class="ingredients-containing-with-botanicals-49">
+                              <tbody class="to-be-emptied ingredients-containing-with-botanicals-49">
                               </tbody>
                         </table>
                       </div>
@@ -963,7 +963,7 @@ crossorigin=""/>
                                 <span lang="en">Estimated Concentration</span>
                               </td>
                             </tr>
-                          <tbody class="ingredients-containing-without-botanicals-49">
+                          <tbody class="to-be-emptied ingredients-containing-without-botanicals-49">
                           </tbody>
                         </table>
                     </div><!--Fermeture blockannexeI49-->
@@ -1660,7 +1660,7 @@ crossorigin=""/>
                                   <span lang="en">Restriction type <sup class="fas fa-question-circle iconetab" title="IFRA defines several types of restriction according to the nature and dangerousness of the concerned ingredient. "></sup> :</span>
                               </h2>
                               <h3 class="textitem d-inline">
-                                <span class="modalbody-ifra-49"></span>
+                                <span class="to-be-emptied modalbody-ifra-49"></span>
                               </h3>
                               <br>
                               <!--Cause d'apparition de l'ingrédients concerné-->
