--- a/html/_/index.html
+++ b/html/_/index.html
@@ -1475,7 +1475,7 @@ crossorigin=""/>
                               <br>
 			      </div>
                               <!--Cause d'apparition de l'ingrédients concerné-->
-			      <div class="cause">
+			      <div class="amendment">
                               <h2 class="item d-inline IFRA-infos">
                                 <span lang="fr">Cause de la restriction <sup class="fas fa-question-circle iconetab" title="Tous les ingrédients ne sont pas réglementés pour la même raison, l'IFRA précise donc les propriétés de l'ingrédient responsables de la restriction."></sup> :</span>
                                 <span lang="en">Cause of restriction <sup class="fas fa-question-circle iconetab" title="All ingredients are not regulated for the same reason, so IFRA specifies the properties of the ingredient responsible for the restriction."></sup> :</span>
@@ -1690,7 +1690,7 @@ crossorigin=""/>
                               <br>
 			      </div>
                               <!--Cause d'apparition de l'ingrédients concerné-->
-			      <div class="cause">
+			      <div class="amendment49">
                               <h2 class="item d-inline IFRA-infos">
                                 <span lang="fr">Cause de la restriction <sup class="fas fa-question-circle iconetab" title="Tous les ingrédients ne sont pas réglementés pour la même raison, l'IFRA précise donc les propriétés de l'ingrédient responsables de la restriction."></sup> :</span>
                                 <span lang="en">Cause of restriction <sup class="fas fa-question-circle iconetab" title="All ingredients are not regulated for the same reason, so IFRA specifies the properties of the ingredient responsible for the restriction."></sup> :</span>
